--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,13 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
+@media (min-width: 1280px) {
+    
+}
+
+@media (min-width: 320px) and(max-width: 1279px) {
+    
+}
