--- a/css/style.css
+++ b/css/style.css
@@ -9,5 +9,13 @@
 }
 
 @media (min-width: 320px) and(max-width: 1279px) {
-    
+
+    .heading{
+        width: 100%;
+        height: 556px;
+    }
+    .back-photo img{
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
 }
