--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,69 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap');
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Montserrat';
 }
 
 @media (min-width: 1280px) {
-    
+    .heading{
+        background-color: #382459;
+    }
 }
 
-@media (min-width: 320px) and(max-width: 1279px) {
-    
+@media (min-width: 320px) and (max-width: 1279px) 
+{
+
+    .heading{
+        position: relative;
+        width: 100%;
+        height: 556px;
+        background-image: url("/img/image2.png");
+        background-size: 100%;
+        background-repeat: no-repeat;
+        background-color: #382459;
+    }
+    .back-photo img{
+        position: absolute;
+        width: 100vw;
+    }
+    .alq-img img {
+        position: absolute;
+        width: 140px;
+        height: 33.01px;
+        left: 31.71px;
+        top: 32.16px;
+        
+    }
+    .alq-3line img{
+        position: absolute;
+        right: 10%;
+        width: 24px;
+        height: 20px;
+        top: 35.16px; 
+    }
+    /* .head-part{
+      
+    } */
+    .students-div{
+        width: 300px;
+        height: 68px;
+    }
+    .studentsh1{
+        color:#30FFCD;
+        font-family: 'Oswald';
+        font-weight: 700;
+        font-size: 28px;
+        line-height: 32px;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        line-height: 32px;
+        padding-top: 75%;
+        padding-left: 15%;
+    }
+    .studentsp p{
+        color: white;
+    }
 }
