--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,7 @@
 }
 
 @media (min-width: 1280px) {
-
-
+    
     /*   =========   block 3   =========   */
 
     .block-3 {
@@ -374,6 +373,71 @@
 }
 
 @media (min-width: 320px) and (max-width: 1279px) {
+
+
+    .heading{
+        position: relative;
+        width: 100%;
+        height: 556px;
+        background-image: url("/img/image2.png");
+        background-size: 100%;
+        background-repeat: no-repeat;
+        background-color: #382459;
+    }
+    .backgroundPurple{
+        position: absolute;
+        width: 100%;
+        height: 560px;
+        z-index: -3;
+    }
+    .back-photo img{
+        position: absolute;
+        width: 100vw;
+    }
+    .back1{
+        z-index: -1;
+    }
+    .back1{
+        z-index: -2;
+    }
+    .alq-img img {
+        position: absolute;
+        width: 140px;
+        height: 33.01px;
+        left: 31.71px;
+        top: 32.16px;
+    }
+    .alq-3line img{
+        position: absolute;
+        right: 10%;
+        width: 24px;
+        height: 20px;
+        top: 35.16px; 
+    }
+    .students_h1{
+        position: absolute;
+        color:#30FFCD;
+        font-family: 'Oswald';
+        font-weight: 700;
+        font-size: 28px;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        line-height: 32px;
+        top: 211px;
+        left: 32px;
+        z-index: 0;
+    }
+    .studentsp{
+       position: absolute;
+       width: 270px;
+       height: 81px;
+       top:300px;
+       left: 32px;
+    }
+    .studentsp p{
+        color: white;
+        font-family: Montserrat;
+    } 
 
 
     /*   =========   block 3   =========   */
