--- a/css/style.css
+++ b/css/style.css
@@ -66,4 +66,57 @@
     .studentsp p{
         color: white;
     }
+    .rect1219 {
+        background-color: #382459;
+        width: 100%;
+        height: 824px;
+    }
+    .one {
+        font-family: Oswald;
+        font-size: 40px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 33px;
+        letter-spacing: 0.03em;
+        text-align: left;
+        padding-left: 32px;
+        padding-top:73px;
+        color: #30FFCD;
+
+    }
+    .two {
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 11px;
+        line-height: 16px;
+        width: 65%;
+        height: 56px;
+        padding-left: 32px;
+        padding-top:21px;
+       
+        color:#ffffff
+    }
+    .three {
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 9px;
+        line-height: 15px;
+        width: 70%;
+        height: 15px;
+        padding-left: 32px;
+        padding-top: 40px;
+        color:#ffffff
+        
+    }
+    .four {
+        font-family: 'Oswald';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 40px;
+        line-height: 33px;
+        width: 338.37px;
+        height: 33.35px;
+    }
 }
