--- a/css/style.css
+++ b/css/style.css
@@ -8,115 +8,225 @@
 }
 
 @media (min-width: 1280px) {
-    .heading{
-        background-color: #382459;
+    .rectangle{
+        height: 110px;
+        width: 100%;
+    }
+    .big{
+        margin-left: 120px;
+        width: 100%;
+    
+    }
+    .fline {
+        display:flex;
+    }
+    .sline {
+        display: flex;
+    }
+    .pline {
+        font-family: 'Oswald';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 47px;
+        line-height: 50px;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        color: #382459;
+        width: 705.85px;
+        height: 50.02px;
+    }
+    .pink {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 13.2857px 29.5238px;
+        background-color: #FF1DC0;
+        border-radius: 50px;
+        width: 224px;
+        height: 48px;
+    }
+    .pink p {
+        text-transform: none;
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 15.0508px;
+        line-height: 18px;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        color: #FFFFFF;
+    }
+    .roketin img{
+        width: 74px;
+        height: 73px;
+        margin-top: 136px;
+        margin-bottom: 33px;
+    }
+    .roketin p:nth-child(2) {
+        width: 260px;
+        height: 73.97px;
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 25px;
+        line-height: 32px;
+        color: #382459;
+        margin-bottom: 13px;
+
+    }
+    .roketin :nth-child(3){
+        width: 412.67px;
+        height: 126.03px;
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 24px;
+        color: #382459;
+        margin-bottom: 71px;
+    }
+    .cap img {
+        width: 85px;
+        height: 91px;
+        margin-top: 127px;
+        margin-bottom: 24px;
+    }
+    .cap p:nth-child(2){
+        width: 368px;
+        height: 66.03px;
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 25px;
+        line-height: 32px;
+        color: #382459;
+        margin-bottom: 21px;
+    }
+    .cap p:nth-child(3){
+        width: 352.16px;
+        height: 93.37px;
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 24px;
+        color: #382459;
+    }
+    .pinkm {
+        display: none;
     }
 }
 
 @media (min-width: 320px) and (max-width: 1279px) 
 {
-
-    .heading{
-        position: relative;
-        width: 100%;
-        height: 556px;
-        background-image: url("/img/image2.png");
-        background-size: 100%;
-        background-repeat: no-repeat;
-        background-color: #382459;
+    .rectangle {
+        display: none;
     }
-    .back-photo img{
-        position: absolute;
-        width: 100vw;
-    }
-    .alq-img img {
-        position: absolute;
-        width: 140px;
-        height: 33.01px;
-        left: 31.71px;
-        top: 32.16px;
-        
-    }
-    .alq-3line img{
-        position: absolute;
-        right: 10%;
-        width: 24px;
-        height: 20px;
-        top: 35.16px; 
-    }
-    /* .head-part{
-      
-    } */
-    .students-div{
-        width: 300px;
-        height: 68px;
-    }
-    .studentsh1{
-        color:#30FFCD;
-        font-family: 'Oswald';
-        font-weight: 700;
-        font-size: 28px;
-        line-height: 32px;
-        letter-spacing: 0.03em;
-        text-transform: uppercase;
-        line-height: 32px;
-        padding-top: 75%;
-        padding-left: 15%;
-    }
-    .studentsp p{
-        color: white;
-    }
-    .rect1219 {
-        background-color: #382459;
-        width: 100%;
-        height: 824px;
-    }
-    .one {
-        font-family: Oswald;
-        font-size: 40px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 33px;
-        letter-spacing: 0.03em;
-        text-align: left;
-        padding-left: 32px;
-        padding-top:73px;
-        color: #30FFCD;
-
-    }
-    .two {
-        font-family: 'Montserrat';
-        font-style: normal;
-        font-weight: 500;
-        font-size: 11px;
-        line-height: 16px;
-        width: 65%;
-        height: 56px;
-        padding-left: 32px;
-        padding-top:21px;
+   .big{
+       width: 100%;
+       margin-left: 32px;
+   }
+   .pline {
+    margin-top: 68px;
+    margin-right: 32px;
+    margin-bottom: 48px;
+    font-family: 'Oswald';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24.7px;
+    line-height: 50px;
+    color: #382459;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    
+   }
+    .pink {
+       display: none;
+   }
+   .roketin img {
+    margin-bottom: 26px;
+    width: 52.93px;
+    height: 51.55px;
+   }
+   .roketin p:nth-child(2){
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 20px;
+    color: #382459;
+    margin-bottom: 7.77px;
+    width: 196px;
+    height: 52.23px;
+   }
+   .roketin p:nth-child(3) {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 11px;
+    line-height: 16px;
+    color: #382459;
+    width: 256px;
+    height: 68px;    
+   }
+   .cap img {
+      margin-left: -4px;
+      margin-top: 46px;
+      margin-bottom: 17px;
+      width:60.1px;
+      height:64.48px;
+   }
+   .cap p:nth-child(2){
+    width: 260px;
+    height: 46.62px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 20px;
+    color: #382459;
+    margin-bottom: 13px;
+    
+   }
+   .cap p:nth-child(3) {
+    width: 248px;
+    height: 76px; 
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 11px;
+    line-height: 16px;
+    color: #382459;
+    margin-bottom: 56px;
+   }
+   .pinkm {
+        background-color: #FF1DC0;
+        border-radius: 50px;
+        width: 193.54px;
+        height: 40px;
+        margin-bottom: 88px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 13.2857px 29.5238px;
+        margin-bottom: 88px;
        
-        color:#ffffff
-    }
-    .three {
-        font-family: 'Montserrat';
-        font-style: normal;
-        font-weight: 500;
-        font-size: 9px;
-        line-height: 15px;
-        width: 70%;
-        height: 15px;
-        padding-left: 32px;
-        padding-top: 40px;
-        color:#ffffff
-        
-    }
-    .four {
-        font-family: 'Oswald';
-        font-style: normal;
-        font-weight: 500;
-        font-size: 40px;
-        line-height: 33px;
-        width: 338.37px;
-        height: 33.35px;
-    }
+   }
+   .pinkm p {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15.0508px;
+    line-height: 18px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    
+    color: #FFFFFF;
+    
+       
+   }
 }
