--- a/css/style.css
+++ b/css/style.css
@@ -769,9 +769,21 @@
         background-repeat: no-repeat;
         background-color: #382459;
     }
+    .backgroundPurple{
+        position: absolute;
+        width: 100%;
+        height: 560px;
+        z-index: -3;
+    }
     .back-photo img{
         position: absolute;
         width: 100vw;
+    }
+    .back1{
+        z-index: -1;
+    }
+    .back1{
+        z-index: -2;
     }
     .alq-img img {
         position: absolute;
@@ -787,26 +799,28 @@
         height: 20px;
         top: 35.16px; 
     }
-    /* .head-part{
-      
-    } */
-    .students-div{
-        width: 300px;
-        height: 68px;
-    }
-    .studentsh1{
+    .students_h1{
+        position: absolute;
         color:#30FFCD;
         font-family: 'Oswald';
         font-weight: 700;
         font-size: 28px;
-        line-height: 32px;
         letter-spacing: 0.03em;
         text-transform: uppercase;
         line-height: 32px;
-        padding-top: 75%;
-        padding-left: 15%;
+        top: 211px;
+        left: 32px;
+        z-index: 0;
+    }
+    .studentsp{
+       position: absolute;
+       width: 270px;
+       height: 81px;
+       top:300px;
+       left: 32px;
     }
     .studentsp p{
         color: white;
-    }
+        font-family: Montserrat;
+    } 
 }
