--- a/css/style.css
+++ b/css/style.css
@@ -764,20 +764,20 @@
         position: relative;
         width: 100%;
         height: 556px;
-        background-image: url("/img/image2.png");
-        background-size: 100%;
-        background-repeat: no-repeat;
-        background-color: #382459;
     }
-    .backgroundPurple{
+    .backpurple{
         position: absolute;
         width: 100%;
         height: 560px;
+        z-index: -4;
+    }
+    .mainback{
+        position: absolute;
         z-index: -3;
     }
     .back-photo img{
         position: absolute;
-        width: 100vw;
+        width: 100%;
     }
     .back1{
         z-index: -1;
@@ -850,7 +850,8 @@
         position: absolute;
         width: 64px;
         height: 37.63px;
-        left: 144px;
+        right: 8%;
         top: 464.43px;
     }
+    
 }
